# autoflow

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  docker-compose-cn.yml  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bootstrap.py  dspy_program.py  main.py  pyproject.toml  pytest.ini  supervisord.conf
backend/app/: __init__.py  api_server.py  celery.py  exceptions.py  logger.py  types.py
backend/app/alembic/versions/: 04947f9684ab_public_chat_engine.py  04d4f05116ed_.py  10f36e8a25c4_.py  197bc8be72d1_.py  211f3c5aa125_chunking_settings.py  27a6723b767a_.py  2adc0b597dcd_int_enum_type.py  749767db5505_add_recommend_questions.py  94b198e20946_.py  a54f966436ce_evaluation.py  a8c79553c9f6_.py  ac6e4d58580d_.py  bd17a4ebccc5_.py  c7f016a904c1_.py  dfee070b8abd_.py  e32f1e546eec_.py  eb0b85608c0a_.py
backend/app/api/: main.py
backend/app/api/admin_routes/: chat_engine.py  feedback.py  legacy_retrieve.py  models.py  retrieve.py  retrieve_old.py  semantic_cache.py  stats.py  user.py
backend/app/api/routes/: api_key.py  chat.py  chat_engine.py  document.py  index.py
backend/app/auth/: api_keys.py  users.py
backend/app/core/: config.py
backend/app/evaluation/: evals.py
backend/app/evaluation/evaluators/: e2e_rag_evaluator.py
backend/app/models/: __init__.py  api_key.py  base.py  chat.py  chat_engine.py  chat_message.py  chunk.py  document.py  embed_model.py  entity.py  evaluation_dataset.py  evaluation_task.py  feedback.py  knowledge_base.py  llm.py  recommend_question.py  relationship.py  reranker_model.py  semantic_cache.py  upload.py
backend/app/models/knowledge_base_scoped/: table_naming.py
backend/app/rag/: build_index.py  chat.py  chat_config.py  default_prompt.py  embed_model_option.py  llm_option.py  reranker_model_option.py  retrieve.py  types.py  utils.py
backend/app/rag/chat/: chat_flow.py  chat_service.py  config.py  stream_protocol.py
backend/app/rag/datasource/: file.py
backend/app/rag/embeddings/: provider.py  resolver.py
backend/app/rag/knowledge_base/: config.py  index_store.py  schema.py  selector.py
backend/app/rag/knowledge_graph/: base.py  extractor.py  intent.py  prerequisite.py
backend/app/rag/llms/: dspy.py  provider.py  resolver.py
backend/app/rag/node_postprocessor/: vllm_reranker.py
backend/app/rag/postprocessors/: __init__.py  metadata_post_filter.py  resolver.py
backend/app/rag/question_gen/: helpers.py  query_decomposer.py
backend/app/rag/rerankers/: provider.py  resolver.py
backend/app/rag/retrievers/: LegacyChatEngineRetriever.py  chat_engine_based.py  multiple_knowledge_base.py
backend/app/rag/vector_store/: tidb_vector_store.py
backend/app/repositories/: __init__.py  chat.py  chat_engine.py  chunk.py  data_source.py  document.py  embedding_model.py  feedback.py  knowledge_base.py  llm.py  reranker_model.py  staff_action_log.py  user.py
backend/app/site_settings/: default_settings.yml
backend/app/tasks/: build_index.py  evaluate.py  knowledge_base.py
backend/app/utils/: dspy.py  jinja2.py  namespace.py  singleflight_cache.py  tracing.py
backend/dspy_compiled_program/decompose_query/: demos.json  program.json
backend/tests/: conftest.py  test_dynamic_models.py  test_llms.py
backend/tests/api/: test_retrieve_api.py
backend/tests/rag/workflow/: test_chat_app_workflow.py
core/: .gitignore  Makefile  README.md  pyproject.toml
core/.cursor/rules/: code-style.mdc
core/autoflow/: __init__.py  data_types.py  db.py  main.py  schema.py  types.py
core/autoflow/chat/: __init__.py
core/autoflow/chunkers/: base.py  helper.py  text.py
core/autoflow/configs/: db.py  knowledge_base.py  main.py
core/autoflow/configs/chunkers/: base.py  text.py
core/autoflow/configs/models/: manager.py
core/autoflow/datasources/: __init__.py  base.py  file.py  mime_types.py  web_base.py  web_single_page.py  web_sitemap.py
core/autoflow/indices/knowledge_graph/: base.py  extractor.py  schema.py
core/autoflow/indices/vector_search/: base.py
core/autoflow/knowledge_base/: __init__.py  base.py  config.py  datasource.py  prompts.py
core/autoflow/knowledge_graph/: index.py  types.py
core/autoflow/knowledge_graph/extractors/: base.py  simple.py
core/autoflow/knowledge_graph/programs/: __init__.py  eval_graph.py  extract_covariates.py  extract_graph.py
core/autoflow/knowledge_graph/retrievers/: base.py  weighted.py
core/autoflow/llms/: __init__.py  provider.py
core/autoflow/llms/chat_models/: __init__.py
core/autoflow/llms/embeddings/: __init__.py  litellm.py
core/autoflow/llms/rerankers/: __init__.py  litellm.py
core/autoflow/loaders/: __init__.py  base.py  helper.py  markdown.py  pdf.py  webpage.py
core/autoflow/models/: __init__.py  base.py  chunk.py  document.py  entity.py  manager.py  provider.py  relationship.py
core/autoflow/models/embedding_models/: __init__.py  litellm.py
core/autoflow/models/llms/: __init__.py  dspy.py  litellm.py
core/autoflow/models/rerank_models/: __init__.py  litellm.py
core/autoflow/orms/: __init__.py  base.py
core/autoflow/prompts/: default_prompt.py
core/autoflow/storage/: schema.py
core/autoflow/storage/tidb/: base.py  (+8 more)
core/autoflow/transformers/: __init__.py
core/autoflow/utils/: dspy_lm.py  hash.py  sql_model.py  sql_model_metaclass.py  uuid6.py  vector.py
core/docs/: .env.example  autoflow-quickstart.ipynb  tidb-python-sdk-quickstart.ipynb
core/docs/fixtures/: tidb-overview.md
core/examples/: README.md
core/examples/quickstart/: .env.example  quickstart.ipynb
core/examples/streamlit/: README.md  build-knowledge-search-with-autoflow-and-streamlit.py  reqs.txt
core/experimental/: README.md
core/experimental/kg_extraction/: extract_graph.ipynb
core/tests/: conftest.py  test_knowledge_base.py  test_llm.py
core/tests/knowledge_base/: test_kb_with_namespace.py  test_kb_without_namespace.py
core/tests/knowledge_graph/: test_kg_extractor.py
core/tests/models/: test_model_manager.py
core/tests/tidb-python-sdk/: test_table.py
(+260 files in other folders)
